# test-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_config  files.html  globals.html  globals_func.html  main.cpp  my__add_8hpp.html  my__add_8hpp_source.html  my_add.hpp  my_test.cpp
.github/workflows/: documentation.yaml  test.yaml
benchmarks/: my_bench.cpp
include/: my_add.hpp
search/: all_0.js  files_0.js  functions_0.js
src/: my_add.cpp
